# auditrum

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  ty.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
auditrum/: __init__.py  blame.py  cli.py  context.py  executor.py  hardening.py  hash_chain.py  retention.py  revert.py  schema.py  settings.py  timetravel.py  triggers.py  utils.py
auditrum/integrations/django/: __init__.py  admin.py  apps.py  audit.py  executor.py  hooks.py  middleware.py  mixins.py  models.py  operations.py  runtime.py  settings.py  shell_context.py  tasks.py  tracking.py  utils.py
auditrum/integrations/django/management/commands/: audit_add_partitions.py  auditrum_makemigrations.py  auditrum_refresh_schema.py
auditrum/integrations/django/migrations/: 0001_initial.py  0002_drop_content_type_id.py  0003_refresh_schema_04.py
auditrum/integrations/django/templates/audit/: object_history.html
auditrum/integrations/django/templatetags/: audit_tags.py
auditrum/integrations/sqlalchemy/: __init__.py  core.py
auditrum/observability/: __init__.py  otel.py  prometheus.py  sentry.py
auditrum/tracking/: __init__.py  _template.py  manager.py  spec.py
auditrum/tracking/templates/: audit_attach_context.sql  audit_current_user_id.sql  audit_reconstruct_row.sql  audit_reconstruct_table.sql  audit_trigger.sql
benchmarks/: README.md  conftest.py  test_hash_chain.py  test_time_travel.py  test_trigger_overhead.py
docs/: README.md  api-stability.md  architecture.md  blame.md  cli.md  concepts.md  django.md  getting-started.md  hardening.md  migration-cookbook.md  observability.md  performance-tuning.md  performance.md  sqlalchemy.md  time-travel.md
docs/case-studies/: catalog.md
examples/grafana/: README.md  auditrum-overview.json
scripts/: README.md  collect-perf-numbers.sql
tests/: conftest.py  test_blame.py  test_cli.py  test_context.py  test_django_admin.py  test_django_audit.py  test_django_executor.py  test_django_init.py  test_django_middleware.py  test_django_models.py  test_django_operations.py  test_django_partitions_command.py  test_django_refresh_schema_command.py  test_django_runtime.py  test_django_settings.py  test_django_shell_context.py  test_django_tasks.py  test_django_templatetags.py  test_django_tracking_decorator.py  test_django_utils.py  test_executor.py  test_hardening.py  test_hash_chain.py  test_historical_row.py  test_mixins.py  test_observability.py  test_properties.py  test_retention.py  test_revert.py  test_schema.py  test_sqlalchemy_integration.py  test_timetravel.py  test_tracking_manager.py  test_tracking_spec.py  test_triggers.py  test_utils.py
tests/integration/: conftest.py  test_blame_pg.py  test_django_history_pg.py  test_hardening_pg.py  test_manager_pg.py  test_partitions.py  test_refresh_schema_pg.py  test_revert_pg.py  test_sync_concurrency_pg.py  test_timetravel_pg.py  test_trigger_roundtrip.py
